fix: Google API and map

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>Resume</title>
   <link href="css/style.css" rel="stylesheet">
-  <script src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
   <script src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCBY2TITqsgFIV0kJePPnf6MTIINJnid9I"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -24,7 +23,7 @@
       <h2>Education</h2>
     </div>
     <div id="mapDiv">
-      <h2>Where I've Lived and Worked</h2>
+      <h2>Where I've Lived and Studied</h2>
     </div>
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
