--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header" class="center-content clear-fix">
       <ul id="topContacts" class="flex-box"></ul>
     </div>
-    <div style="clear: both;"></div>
+    <div></div>
     <div id="workExperience" class="gray">
       <h2>Work Experience</h2>
     </div>
