fix: JS and CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 <body>
   <div id="main">
     <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
+      <div class="header-top">
+      </div>
+      <div class="header-contacts">
+        <ul id="topContacts" class="flex-box"></ul>      
+      </div>
+      <div class="header-main">
+      </div>
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
@@ -35,26 +41,26 @@
   <script src="js/helper.js"></script>
   <script src="js/resumeBuilder.js"></script>
   <script>
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.display = 'none';
-    }
-    if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.display = 'none';
-    }
-    if(document.getElementsByClassName('work-entry').length === 0) {
-      document.getElementById('workExperience').style.display = 'none';
-    }
-    if(document.getElementsByClassName('project-entry').length === 0) {
-      document.getElementById('projects').style.display = 'none';
-    }
-    if(document.getElementsByClassName('education-entry').length === 0) {
-      document.getElementById('education').style.display = 'none';
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('lets-connect').style.display = 'none';
-    }
-    if(document.getElementById('map') === null) {
-      document.getElementById('mapDiv').style.display = 'none';
+    // if(document.getElementsByClassName('flex-item').length === 0) {
+    //   document.getElementById('topContacts').style.display = 'none';
+    // }
+    // if(document.getElementsByTagName('h1').length === 0) {
+    //   document.getElementById('header').style.display = 'none';
+    // }
+    // if(document.getElementsByClassName('work-entry').length === 0) {
+    //   document.getElementById('workExperience').style.display = 'none';
+    // }
+    // if(document.getElementsByClassName('project-entry').length === 0) {
+    //   document.getElementById('projects').style.display = 'none';
+    // }
+    // if(document.getElementsByClassName('education-entry').length === 0) {
+    //   document.getElementById('education').style.display = 'none';
+    // }
+    // if(document.getElementsByClassName('flex-item').length === 0) {
+    //   document.getElementById('lets-connect').style.display = 'none';
+    // }
+    // if(document.getElementById('map') === null) {
+    //   document.getElementById('mapDiv').style.display = 'none';
     }
   </script>
 </body>
