--- a/index.html
+++ b/index.html
@@ -13,27 +13,31 @@
     <div class="header-top">
       <ul id="topContacts"></ul>              
     </div>
-    <div class="header-middle">
+    <section class="header-middle">
       <div class="middle-image">
       </div>  
       <div class="middle-text">
       </div>       
-    </div>
-    <div class="header-bottom">
-    </div>
+    </section>   
   </header>
-  <section id="workExperience">
-    <h2 class="work-title">Work Experience</h2>
-  </section>
-  <section id="projects">
-    <h2 class="projects-title">Projects</h2>
-  </section>
-  <section id="education">
-    <h2 class="education-title">Education</h2>
-  </section>
-  <section id="mapDiv">
-    <h2 class="map-title">Where I've Lived and Studied</h2>
-  </section>
+  <main class="main">
+    <section>
+      <div class="header-bottom">
+      </div>      
+    </section> 
+    <section id="workExperience">
+      <h2 class="work-title">Work Experience</h2>
+    </section>
+    <section id="projects">
+       <h2 class="projects-title">Projects</h2> 
+    </section>
+    <section id="education">
+      <h2 class="education-title">Education</h2>
+    </section>
+    <section id="mapDiv">
+      <h2 class="map-title">Where I've Lived and Studied</h2>
+    </section>
+  </main>
   <footer id="lets-connect">
     <h2 class="connect-title">Let's Connect</h2>
       <ul id="footerContacts">
