feat: finish CSS style fix: fix mistakes in CSS and JS code

--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
     <div class="header-top">
       <ul id="topContacts"></ul>              
     </div>
-    <section class="header-middle">
+    <div class="header-middle">
       <div class="middle-image">
       </div>  
       <div class="middle-text">
       </div>       
-    </section>   
+    </div>   
   </header>
   <main class="main">
-    <section>
-      <div class="header-bottom">
-      </div>      
+    <section id="skills">     
     </section> 
     <section id="workExperience">
       <h2 class="work-title">Work Experience</h2>
